--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 bdk = { version = "0.20.0", default-feature = false, features = ["all-keys"] }
-
+reqwest = {version= "0.11.11", features = ["json"]}
+futures = "0.3"
+tokio =  { version = "1", features = ["full"] }
+tokio-test = "*"
