--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = {version= "0.11.11", features = ["json"]}
 futures = "0.3"
 tokio =  { version = "1", features = ["full"] }
 tokio-test = "*"
+actix-web = "4"
