--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ serde = { version = "1.0.137", features = ["derive"] }
 tokio-pg-mapper = "0.2.0"
 tokio-pg-mapper-derive = "0.2.0"
 tokio-postgres = "0.7.6"
+log = "0.4"
+env_logger = "0.9.1"
+
